package v2;

message FileMetadata {
	optional int64 length = 1;
	optional bytes key = 2;
	optional int64 creation_time = 3;
    optional bool IsDir = 4;
}

message LeafRecordEntry {
    required string name = 1;
    required FileMetadata metadata = 2;
}

message LeafRecord {
    repeated LeafRecordEntry entries = 1;
}
